--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,22 +13,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.x'
+        cache: 'pip'
 
     - name: install python deps
-      run: pip3 install --quiet --requirement requirements.txt pylint
+      run: pip3 install --quiet --requirement requirements.txt ruff
 
     - name: unittest
       run: python3 -m unittest --verbose
 
-    - name: pylint
-      run: pylint *.py
+    - name: ruff
+      run: ruff check --format=github .
 
-    - uses: actions/setup-node@v2
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 16
 
     - name: install eslint
       run: npm install -g eslint
