--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
 	"dependencies": {
+		"esbuild": "^0.17.15",
+		"lit": "^2.7.2",
+		"lit-flatpickr": "^0.4.0",
 		"typescript": "^5.0.3"
+	},
+	"devDependencies": {
+		"@types/node": "^18.15.11"
 	}
 }
