--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,14 @@
 [tool.ruff]
 line-length = 120
+select = [
+	'E', 'F',
+	'YTT', 'COM', 'T10', 'ISC', 'G', 'PIE', 'Q', 'RSE',
+	'PLC', 'PLE',
+	'RUF',
+]
+[tool.ruff.flake8-quotes]
+docstring-quotes = 'single'
+inline-quotes = 'single'
+multiline-quotes = 'single'
+[tool.ruff.isort]
+lines-after-imports = 1
