ruff --format → --output-format
https://github.com/astral-sh/ruff/blob/main/CHANGELOG.md#010

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
       run: python3 -m unittest --verbose
 
     - name: ruff
-      run: ruff check --format=github .
+      run: ruff check --output-format=github .
 
     - uses: pnpm/action-setup@v2
       with:
