--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,13 +18,14 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.x'
-        cache: 'pip'
 
-    - name: install python deps
-      run: pip3 install --quiet --requirement requirements.txt ruff
+    - uses: astral-sh/setup-uv@v6 # https://docs.astral.sh/uv/guides/integration/github
+      with:
+        enable-cache: true
 
-    - name: ruff
-      run: ruff check --output-format=github .
+    - run: uv sync
+
+    - run: uv run ruff check --output-format=github
 
     - uses: pnpm/action-setup@v3
       with:
