--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,16 +27,10 @@ jobs:
 
     - run: uv run ruff check --output-format=github
 
-    - uses: pnpm/action-setup@v3
-      with:
-        version: '*'
+    - uses: oven-sh/setup-bun@v2
 
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 18
-        cache: pnpm
+    - run: bun install --frozen-lockfile
 
-    - run: pnpm install --frozen-lockfile
+    - run: bun run tsc
 
-    - name: eslint
-      run: pnpm exec eslint .
+    - run: bun x eslint .
